--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
 @model PROEL4W.Pages.RegisterModel
 @{
+    ViewData["Title"] = "Register";
 }
+<h1>@ViewData["Title"]</h1>
 <h2>Create Account</h2>
 
 <form method="post">
